--- a/src/plots.ipynb
+++ b/src/plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1492bc8c",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "85d704e1",
    "metadata": {},
    "outputs": [
@@ -135,57 +135,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "01c7fbd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "CV_means_390 = []\n",
+    "for i in range(4):\n",
+    "    temp_stats = stats_all[i][stats_all[i][\"range\"] == \"390_399\"]\n",
+    "    CV_means_390.append(temp_stats[\"std\"].mean()/ temp_stats[\"mean\"].mean() * 100)\n",
+    "#print(f\"Relative uncertainty of repeatability 390-439 nm, mean: {np.mean(CV_means_390):.3f} %,  std: {np.std(CV_means_390):.3f} %\")\n",
+    "uncertainty_390 = np.sqrt(5**2 + np.mean(CV_means_390)**2)\n",
+    "#print(f\"Measurement Uncertainty 390-439 nm: {uncertainty_390:.3f} %\")\n",
+    "\n",
+    "CV_means_400 = []\n",
+    "for i in range(4):\n",
+    "    temp_stats = stats_all[i][stats_all[i][\"range\"] == \"400_439\"]\n",
+    "    CV_means_400.append(temp_stats[\"std\"].mean()/ temp_stats[\"mean\"].mean() * 100)\n",
+    "#print(f\"Relative uncertainty of repeatability 400-439 nm, mean: {np.mean(CV_means_400):.3f} %,  std: {np.std(CV_means_400):.3f} %\")\n",
+    "uncertainty_400 = np.sqrt(5**2 + np.mean(CV_means_400)**2)\n",
+    "#print(f\"Measurement Uncertainty 400-439 nm: {uncertainty_400:.3f} %\")\n",
+    "\n",
+    "CV_means_440 = []\n",
+    "for i in range(4):\n",
+    "    temp_stats = stats_all[i][stats_all[i][\"range\"] == \"440_700\"]\n",
+    "    CV_means_440.append(temp_stats[\"std\"].mean()/ temp_stats[\"mean\"].mean() * 100)\n",
+    "#print(f\"Relative uncertainty of repeatability 440-700 nm, mean: {np.mean(CV_means_440):.3f} %,  std: {np.std(CV_means_440):.3f} %\")\n",
+    "uncertainty_440 = np.sqrt(3**2 + np.mean(CV_means_440)**2)\n",
+    "#print(f\"Measurement Uncertainty 440-700 nm: {uncertainty_440:.3f} %\")\n",
+    "\n",
+    "CV_means_701 = []\n",
+    "for i in range(4):\n",
+    "    temp_stats = stats_all[i][stats_all[i][\"range\"] == \"701_1100\"]\n",
+    "    CV_means_701.append(temp_stats[\"std\"].mean()/ temp_stats[\"mean\"].mean() * 100)\n",
+    "#print(f\"Relative uncertainty of repeatability 701-1100 nm, mean: {np.mean(CV_means_701):.3f} %,  std: {np.std(CV_means_701):.3f} %\")\n",
+    "uncertainty_701 = np.sqrt(3**2 + np.mean(CV_means_701)**2)\n",
+    "#print(f\"Measurement Uncertainty 701-1100 nm: {uncertainty_701:.3f} %\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "462b037f",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relative uncertainty of repeatability 390-439 nm: 1.253 %\n",
-      "Measurement Uncertainty 390-439 nm: 5.155 %\n",
-      "Relative uncertainty of repeatability 400-439 nm: 0.232 %\n",
-      "Measurement Uncertainty 400-439 nm: 5.005 %\n",
-      "Relative uncertainty of repeatability 440-700 nm: 0.102 %\n",
-      "Measurement Uncertainty 440-700 nm: 3.002 %\n",
-      "Relative uncertainty of repeatability 701-1100 nm: 3.182 %\n",
-      "Measurement Uncertainty 701-1100 nm: 4.373 %\n"
+      "Wavelength Range (nm) Repeatability (%)         Measurement Uncertainty (%)   \n",
+      "---------------------------------------------------------------------------\n",
+      "390–439              1.253 ± 0.460             5.155\n",
+      "400–439              0.232 ± 0.015             5.005\n",
+      "440–700              0.102 ± 0.018             3.002\n",
+      "701–1100             3.182 ± 1.185             4.373\n"
      ]
     }
    ],
    "source": [
-    "CV_means_390 = []\n",
-    "for i in range(4):\n",
-    "    temp_stats = stats_all[i][stats_all[i][\"range\"] == \"390_399\"]\n",
-    "    CV_means_390.append(temp_stats[\"std\"].mean()/ temp_stats[\"mean\"].mean() * 100)\n",
-    "print(f\"Relative uncertainty of repeatability 390-439 nm: {np.mean(CV_means_390):.3f} %\")\n",
-    "uncertainty_390 = np.sqrt(5**2 + np.mean(CV_means_390)**2)\n",
-    "print(f\"Measurement Uncertainty 390-439 nm: {uncertainty_390:.3f} %\")\n",
+    "# Prepare rows\n",
+    "rows = [\n",
+    "    (\"390–439\", np.mean(CV_means_390), np.std(CV_means_390), uncertainty_390),\n",
+    "    (\"400–439\", np.mean(CV_means_400), np.std(CV_means_400), uncertainty_400),\n",
+    "    (\"440–700\", np.mean(CV_means_440), np.std(CV_means_440), uncertainty_440),\n",
+    "    (\"701–1100\", np.mean(CV_means_701), np.std(CV_means_701), uncertainty_701),\n",
+    "]\n",
     "\n",
-    "CV_means_400 = []\n",
-    "for i in range(4):\n",
-    "    temp_stats = stats_all[i][stats_all[i][\"range\"] == \"400_439\"]\n",
-    "    CV_means_400.append(temp_stats[\"std\"].mean()/ temp_stats[\"mean\"].mean() * 100)\n",
-    "print(f\"Relative uncertainty of repeatability 400-439 nm: {np.mean(CV_means_400):.3f} %\")\n",
-    "uncertainty_400 = np.sqrt(5**2 + np.mean(CV_means_400)**2)\n",
-    "print(f\"Measurement Uncertainty 400-439 nm: {uncertainty_400:.3f} %\")\n",
+    "# Print header\n",
+    "print(f\"{'Wavelength Range (nm)':<20} {'Repeatability (%)':<25} {'Measurement Uncertainty (%)':<30}\")\n",
+    "print(\"-\" * 75)\n",
     "\n",
-    "CV_means_440 = []\n",
-    "for i in range(4):\n",
-    "    temp_stats = stats_all[i][stats_all[i][\"range\"] == \"440_700\"]\n",
-    "    CV_means_440.append(temp_stats[\"std\"].mean()/ temp_stats[\"mean\"].mean() * 100)\n",
-    "print(f\"Relative uncertainty of repeatability 440-700 nm: {np.mean(CV_means_440):.3f} %\")\n",
-    "uncertainty_440 = np.sqrt(3**2 + np.mean(CV_means_440)**2)\n",
-    "print(f\"Measurement Uncertainty 440-700 nm: {uncertainty_440:.3f} %\")\n",
-    "\n",
-    "CV_means_701 = []\n",
-    "for i in range(4):\n",
-    "    temp_stats = stats_all[i][stats_all[i][\"range\"] == \"701_1100\"]\n",
-    "    CV_means_701.append(temp_stats[\"std\"].mean()/ temp_stats[\"mean\"].mean() * 100)\n",
-    "print(f\"Relative uncertainty of repeatability 701-1100 nm: {np.mean(CV_means_701):.3f} %\")\n",
-    "uncertainty_701 = np.sqrt(3**2 + np.mean(CV_means_701)**2)\n",
-    "print(f\"Measurement Uncertainty 701-1100 nm: {uncertainty_701:.3f} %\")"
+    "# Print rows\n",
+    "for wl_range, mean_val, std_val, uncertainty in rows:\n",
+    "    repeatability_str = f\"{mean_val:.3f} ± {std_val:.3f}\"\n",
+    "    print(f\"{wl_range:<20} {repeatability_str:<25} {uncertainty:.3f}\")\n"
    ]
   },
   {
@@ -198,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4552849e",
    "metadata": {},
    "outputs": [
@@ -219,7 +242,6 @@
       "f6:\t5.844187486673903\n",
       "f7:\t6.362705404583997\n",
       "f8:\t3.743926169582209\n",
-      "Coefficients saved to:  ../data/Calibration_coefficients.csv\n",
       "Found matching files:\n",
       "Calibration.2025.sensor2.csv\n",
       "Beamsplitter data loaded\n",
@@ -233,7 +255,6 @@
       "f6:\t9.179365731090385\n",
       "f7:\t11.40553352868044\n",
       "f8:\t7.269065632125866\n",
-      "Coefficients saved to:  ../data/Calibration_coefficients.csv\n",
       "Found matching files:\n",
       "Calibration.2025.sensor3.csv\n",
       "Beamsplitter data loaded\n",
@@ -247,7 +268,6 @@
       "f6:\t9.757737774463381\n",
       "f7:\t11.306200006677942\n",
       "f8:\t8.138532306097833\n",
-      "Coefficients saved to:  ../data/Calibration_coefficients.csv\n",
       "Found matching files:\n",
       "Calibration.2025.sensor4.csv\n",
       "Beamsplitter data loaded\n",
@@ -260,8 +280,7 @@
       "f5:\t14.117624616623377\n",
       "f6:\t10.868468164486933\n",
       "f7:\t14.283270261501116\n",
-      "f8:\t11.22656385436416\n",
-      "Coefficients saved to:  ../data/Calibration_coefficients.csv\n"
+      "f8:\t11.22656385436416\n"
      ]
     }
    ],
@@ -283,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a2d0b077",
    "metadata": {},
    "outputs": [
@@ -295,9 +314,19 @@
       "r2: 2: 0.944\n",
       "r2: 3: 0.954\n",
       "r2: 4: 0.958\n",
-      "R2 mean: 0.947884\n",
-      "R2 std: 0.008590\n",
-      "relative std: 0.906 %\n"
+      "-\n",
+      "r2 vis: 1: 0.745\n",
+      "r2 vis: 2: 0.810\n",
+      "r2 vis: 3: 0.799\n",
+      "r2 vis: 4: 0.841\n",
+      "-\n",
+      "R2 mean: 94.788\n",
+      "R2 std: 0.859\n",
+      "relative uncertainty: 0.906 %\n",
+      "-\n",
+      "R2 mean vis: 79.858\n",
+      "R2 std vis: 3.448\n",
+      "relative uncertainty vis: 4.318 %\n"
      ]
     }
    ],
@@ -307,9 +336,20 @@
     "    r2 = r2_score(PAR, nir_comp_all[i])\n",
     "    r2_all.append(r2)\n",
     "    print(f\"r2: {i+1}: {r2:.3f}\")\n",
-    "print(f\"R2 mean: {np.mean(r2_all):.6f}\")\n",
-    "print(f\"R2 std: {np.std(r2_all):.6f}\")\n",
-    "print(f\"relative std: {np.std(r2_all)/np.mean(r2_all)*100:.3f} %\")"
+    "print(\"-\")\n",
+    "r2_all_vis = []\n",
+    "for i, sensor in enumerate(vis_all):\n",
+    "    r2 = r2_score(PAR, vis_all[i])\n",
+    "    r2_all_vis.append(r2)\n",
+    "    print(f\"r2 vis: {i+1}: {r2:.3f}\")\n",
+    "print(\"-\")\n",
+    "print(f\"R2 mean: {np.mean(r2_all)*100:.3f}\")\n",
+    "print(f\"R2 std: {np.std(r2_all)*100:.3f}\")\n",
+    "print(f\"relative uncertainty: {np.std(r2_all)/np.mean(r2_all)*100:.3f} %\")\n",
+    "print(\"-\")\n",
+    "print(f\"R2 mean vis: {np.mean(r2_all_vis)*100:.3f}\")\n",
+    "print(f\"R2 std vis: {np.std(r2_all_vis)*100:.3f}\")\n",
+    "print(f\"relative uncertainty vis: {np.std(r2_all_vis)/np.mean(r2_all_vis)*100:.3f} %\")"
    ]
   },
   {
@@ -332,7 +372,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x20a07ae5d90>"
+       "<matplotlib.legend.Legend at 0x1cf406b7f50>"
       ]
      },
      "execution_count": 8,
