update field validation

--- a/src/result_plots.ipynb
+++ b/src/result_plots.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "1492bc8c",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f27103ce",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "85d704e1",
    "metadata": {},
    "outputs": [
@@ -45,19 +45,19 @@
      "text": [
       "Found matching files:\n",
       "Calibration.2025.sensor1.csv\n",
-      "Coefficients (comma-separated): 29.11024906826017, 16.9939655307408, 12.12624803747697, 9.901982375441948, 9.042761980427278, 7.284044445211508, 6.791485333465561, 5.4651270923709445, -5.046215405876729, 0.2517810735710138\n",
+      "Coefficients: 29.11024906826017, 16.9939655307408, 12.12624803747697, 9.901982375441948, 9.042761980427278, 7.284044445211508, 6.791485333465561, 5.4651270923709445, -5.046215405876729, 0.2517810735710138\n",
       "Coefficients saved to:  ../data/Calibration_coefficients.csv\n",
       "Found matching files:\n",
       "Calibration.2025.sensor2.csv\n",
-      "Coefficients (comma-separated): 37.29792177789769, 21.262297900993367, 16.97708091868878, 15.273172741787826, 13.322099267749344, 10.722226448569403, 12.603456126506261, 8.685011472704995, -5.392285634902561, 0.3293555215696629\n",
+      "Coefficients: 37.29792177789769, 21.262297900993367, 16.97708091868878, 15.273172741787826, 13.322099267749344, 10.722226448569403, 12.603456126506261, 8.685011472704995, -5.392285634902561, 0.3293555215696629\n",
       "Coefficients saved to:  ../data/Calibration_coefficients.csv\n",
       "Found matching files:\n",
       "Calibration.2025.sensor3.csv\n",
-      "Coefficients (comma-separated): 38.05196424495017, 21.2806692397086, 17.154453715770284, 14.894713879313365, 13.227683720750495, 11.686852936708064, 12.516697064035778, 9.850906196547745, -6.069419866752719, 0.3890088719154622\n",
+      "Coefficients: 38.05196424495017, 21.2806692397086, 17.154453715770284, 14.894713879313365, 13.227683720750495, 11.686852936708064, 12.516697064035778, 9.850906196547745, -6.069419866752719, 0.3890088719154622\n",
       "Coefficients saved to:  ../data/Calibration_coefficients.csv\n",
       "Found matching files:\n",
       "Calibration.2025.sensor4.csv\n",
-      "Coefficients (comma-separated): 42.49675613158447, 26.139274556590813, 21.524250184394386, 18.66096017047156, 15.967648379605182, 12.940516821213984, 16.170514930093518, 12.961724536616916, -7.470744826175291, 0.44167143908077555\n",
+      "Coefficients: 42.49675613158447, 26.139274556590813, 21.524250184394386, 18.66096017047156, 15.967648379605182, 12.940516821213984, 16.170514930093518, 12.961724536616916, -7.470744826175291, 0.44167143908077555\n",
       "Coefficients saved to:  ../data/Calibration_coefficients.csv\n"
      ]
     }
@@ -70,7 +70,7 @@
     "# Collect nir_comp for each iteration\n",
     "for sensor_nr in range(1, 5):\n",
     "    sensor_instance = cal.Calibration(path, sensor_nr, sensor_type)\n",
-    "    if sensor_instance.preprocessing(save_data=False, spectrum = \"PAR\"):\n",
+    "    if sensor_instance.preprocessing(save_data=False):\n",
     "        sensor_instance.pls(channels=channels)\n",
     "        _, nir_comp, _ = sensor_instance.plot_quantum_response(plot=False)\n",
     "        nir_comp_all.append(nir_comp)\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "3e6528cb",
    "metadata": {},
    "outputs": [
@@ -97,16 +97,16 @@
      "text": [
       "Found matching files:\n",
       "Calibration.2025.sensor1.csv\n",
-      "Coefficients (comma-separated): 3.916067941105744, 4.540775002901742, 6.356520650544656, 5.873454815490502, 6.383070512231889, 5.844187486673903, 6.362705404583997, 3.743926169582209\n",
+      "Coefficients: 3.916067941105744, 4.540775002901742, 6.356520650544656, 5.873454815490502, 6.383070512231889, 5.844187486673903, 6.362705404583997, 3.743926169582209\n",
       "Found matching files:\n",
       "Calibration.2025.sensor2.csv\n",
-      "Coefficients (comma-separated): 34.76135055662475, 21.097057003082806, 17.6546564469306, 14.543893167607466, 12.222659060268843, 9.179365731090385, 11.40553352868044, 7.269065632125866\n",
+      "Coefficients: 34.76135055662475, 21.097057003082806, 17.6546564469306, 14.543893167607466, 12.222659060268843, 9.179365731090385, 11.40553352868044, 7.269065632125866\n",
       "Found matching files:\n",
       "Calibration.2025.sensor3.csv\n",
-      "Coefficients (comma-separated): 34.41021092523726, 20.958324387248293, 17.75947146365735, 14.051088434517794, 12.031352471124395, 9.757737774463381, 11.306200006677942, 8.138532306097833\n",
+      "Coefficients: 34.41021092523726, 20.958324387248293, 17.75947146365735, 14.051088434517794, 12.031352471124395, 9.757737774463381, 11.306200006677942, 8.138532306097833\n",
       "Found matching files:\n",
       "Calibration.2025.sensor4.csv\n",
-      "Coefficients (comma-separated): 36.97073569643011, 25.092140609745513, 21.173048650731097, 17.084558694852106, 14.117624616623377, 10.868468164486933, 14.283270261501116, 11.22656385436416\n"
+      "Coefficients: 36.97073569643011, 25.092140609745513, 21.173048650731097, 17.084558694852106, 14.117624616623377, 10.868468164486933, 14.283270261501116, 11.22656385436416\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
     "\n",
     "for sensor_nr in range(1, 5):\n",
     "    sensor_instance = cal.Calibration(path, sensor_nr, sensor_type)\n",
-    "    if sensor_instance.preprocessing(save_data=False, spectrum = \"PAR\"):\n",
+    "    if sensor_instance.preprocessing(save_data=False):\n",
     "        sensor_instance.pls(channels=channels, save_coef=False)\n",
     "        wl, vis, PAR = sensor_instance.plot_quantum_response(plot = False)\n",
     "        wl_all.append(wl)\n",
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "d12640d1",
    "metadata": {},
    "outputs": [
@@ -151,10 +151,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x1b8ca3f5400>"
+       "<matplotlib.legend.Legend at 0x2123ab17350>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "a2d0b077",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "01c7fbd8",
    "metadata": {},
    "outputs": [],
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "462b037f",
    "metadata": {},
    "outputs": [
@@ -328,12 +328,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wavelength Range (nm) Repeatability (%)         Measurement Uncertainty (%)   \n",
+      "Wavelength Range (nm)     Repeatability (%)         Measurement Uncertainty (%)   \n",
       "---------------------------------------------------------------------------\n",
-      "390_399              1.253 ± 0.460             5.155\n",
-      "400_439              0.232 ± 0.015             5.005\n",
-      "440_700              0.102 ± 0.018             3.002\n",
-      "701_1100             3.182 ± 1.185             4.373\n"
+      "390_399                   1.253 ± 0.460             5.155\n",
+      "400_439                   0.232 ± 0.015             5.005\n",
+      "440_700                   0.102 ± 0.018             3.002\n",
+      "701_1100                  3.182 ± 1.185             4.373\n"
      ]
     }
    ],
@@ -347,13 +347,13 @@
     "]\n",
     "\n",
     "# Print header\n",
-    "print(f\"{'Wavelength Range (nm)':<20} {'Repeatability (%)':<25} {'Measurement Uncertainty (%)':<30}\")\n",
+    "print(f\"{'Wavelength Range (nm)':<25} {'Repeatability (%)':<25} {'Measurement Uncertainty (%)':<30}\")\n",
     "print(\"-\" * 75)\n",
     "\n",
     "# Print rows\n",
     "for wl_range, mean_val, std_val, uncertainty in rows:\n",
     "    repeatability_str = f\"{mean_val:.3f} ± {std_val:.3f}\"\n",
-    "    print(f\"{wl_range:<20} {repeatability_str:<25} {uncertainty:.3f}\")\n"
+    "    print(f\"{wl_range:<25} {repeatability_str:<25} {uncertainty:.3f}\")\n"
    ]
   }
  ],
